Add English translations to footer

--- a/ai.finto.fi/locales/en/translation.json
+++ b/ai.finto.fi/locales/en/translation.json
@@ -42,20 +42,20 @@
   "TERMI": "TERM",
   "no-results": "No results",
 
-  "email-label": "???",
-  "footer-info": "???",
+  "email-label": "E-mail:",
+  "footer-info": "Finto AI is a service for automated subject indexing. It is powered by Annif version ",
   "api-heading": "API service",
-  "api-description": "Finto AI is also an API service that can be integrated to other systems.",
+  "api-description": "Finto AI offers also an API that can be integrated to other systems.",
   "api-info-link": "More information",
   "api-description-link": "OpenAPI description",
-  "footer-links-heading": "???",
-  "footer-info-link": "???",
-  "footer-contact-link": "???",
-  "footer-feedback-link": "???",
-  "footer-accessibility-link": "???",
-  "footer-privacy-link": "???",
-  "footer-follow-heading": "???",
-  "footer-twitter-link": "???",
+  "footer-links-heading": "Links",
+  "footer-info-link": "About Finto",
+  "footer-contact-link": "Contact information",
+  "footer-feedback-link": "Feedback",
+  "footer-accessibility-link": "Accessibility statement",
+  "footer-privacy-link": "Privacy policy",
+  "footer-follow-heading": "Follow us",
+  "footer-twitter-link": "Twitter",
   "nat-lib-alt": "The National Library of Finland",
-  "nat-lib": "???"
+  "nat-lib": "The service is offered by the National Library of Finland"
 }
